# itsnotallaboutme

./: .env  .gitignore  Cargo.toml  Shuttle.toml  bun.lockb  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
backend/: .gitignore  Cargo.toml  Shuttle.toml  visitors.db
backend/.next/: trace
backend/bookshelf/: bookshelf.json
backend/bookshelfs/: add_books.sh  bookshelf.json
backend/memoirs/: antara-penggali-ilmu-dan-kegelisahan.md  bicara-untuk-dianggap-tahu.md  dari-hening-ke-kebingungan.md  entah-siapa-yang-harus-disalahkan.md  gerak-diam-diam-gerak.md  jiwa-dan-yang-tampak.md  kant-dan-labirin.md  kebingungan-dalam-gelap-dan-cahaya.md  kegilaan.md  keingintahuan-dan-keterbatasan.md  kesepian.md  kesunyian-keingintahuan-dan-keterasingan-diri.md  menarik-kesimpulan.md  menggali-ketidakjelasan.md  mengintip-dunia-luar-di-tengah-keterasingan.md  menguntai-rahasia-bersama-atmosfer.md  menjelajah-cakrawala-malam.md  perasaan-terjebak.md  pergulatan-pencarian.md  pertanyaan-nan-merenggut-kesadaran.md  pinggir-lapangan.md  pustaka.md  renungan-malam.md  saat-hati-terguncang.md  saat-pikiran-menjadi-musuh.md  sekilas-pandang.md  terjebak-dalam-penderitaan-pikiran.md  terperangkap-dalam-kebosanan.md
backend/notes/: dotfiles.md  helloworld.md  linux.md  sample.md
backend/src/: cli.rs  main.rs  router.rs
content/: notes.json
content/notes/: 1721838449194.md
markdown/: note.md
notes/: 1721192188481.md  1721192627886.md  1721194751269.md  1721830215542.md  1721830575276.md
src/: about.rs  home.rs  lib.rs  main.rs  new_note.rs  note.rs  notes.rs  structs.rs  template.rs
src/app/: Navbar.tsx  globals.css  layout.tsx  navbar.tsx  page.tsx  visitor_count.tsx
src/app/about/: page.tsx
src/app/bookshelf/: page.tsx
src/app/bookshelfs/: page.tsx
src/app/memoir/: page.tsx
src/app/memoirs/: page.tsx
src/app/memoirs/[filename]/: MemoirPage.tsx  page.tsx
src/app/notes/: page.tsx
src/app/notes/[filename]/: page.tsx
src/data/: memoirsList.ts
static/js/: app.js
static/styles/: globals.css
templates/: footer.html  header.html  layout.html  navigation.html
templates/content/about/: about_content.html  projects.html  skills.html
templates/content/notes/: new_note.html  notes_content.html
