[package]
name = "itsnotallaboutme"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
colored = "2.1.0"
markdown = "0.3.0"
pulldown-cmark = "0.11.0"
rand = "0.8.5"
serde = "1.0.204"
shuttle-axum = "0.46.0"
shuttle-runtime = "0.46.0"
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }

[lib]
name = "import"
path = "src/lib.rs"
