[package]
name = "itsnotallaboutme"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
base64 = "0.22.1"
colored = "2.1.0"
features = "0.10.0"
json = "0.12.4"
markdown = "0.3.0"
pulldown-cmark = "0.11.0"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = "1.0.204"
serde_json = "1.0.120"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }

[lib]
name = "import"
path = "src/lib.rs"
