[package]
name = "itsnotallaboutme"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "cli"
path = "src/cli.rs"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie-private"] }
bcrypt = "0.16.0"
http = "1.1.0"
lettre = "0.11.7"
rand = "0.8.5"
shuttle-shared-db = { version = "0.51.0", features = ["sqlx"] }
sqlx = { version = "0.8.3", features = ["sqlite"] }
serde = { version = "1.0.152", features = ["derive"] }
shuttle-secrets = "0.42.0"
shuttle-runtime = "0.51.0"
shuttle-axum = "0.51.0"
time = "0.3.20"
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
tokio = "1.26.0"
shuttle-service = "0.51.0"
serde_json = "1.0.125"
tower-cookies = "0.11.0"
